Remove scrollbars unless requested Fix: Do not initialize controller twice if show called more than once Fix: List box removes all options before adding new set of options wip: Show a "busy" cursor when loading data rather than progress bar to remove flickering

--- a/boss/styles.css
+++ b/boss/styles.css
@@ -422,11 +422,13 @@ body {
   padding: 20px;
   font-family: "Geneva";
   font-size: 22px;
-  overflow: scroll;
-  resize: both;
+  overflow: auto;
   /* Prevents window from being resized down any further */
   min-width: 360px;
   min-height: 40px;
+}
+#desktop .ui-window > .container.resizable {
+  resize: both;
 }
 
 /* Some windows, like folder windows, should have no padding. */
